[gd_scene load_steps=8 format=3 uid="uid://cqur83d6dqocf"]

[ext_resource type="Script" path="res://app_bar.gd" id="1_lm3o7"]
[ext_resource type="PackedScene" uid="uid://2jcpfncolph" path="res://TextSettings/settings_managed_label.tscn" id="2_k271n"]
[ext_resource type="Texture2D" uid="uid://ddurpjpqyfl0m" path="res://Icons/BurningBook.png" id="3_fomf7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7b1vp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_34wgi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ch8bf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w1bqq"]

[node name="AppBar" type="Control"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("1_lm3o7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="NameLabel" parent="ColorRect" instance=ExtResource("2_k271n")]
custom_minimum_size = Vector2(750, 0)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_left = 10.0
grow_horizontal = 1
text = "RPG Dice Roller"
horizontal_alignment = 0

[node name="ClearHistoryButton" type="Button" parent="ColorRect"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_right = -15.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxEmpty_7b1vp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_34wgi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ch8bf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w1bqq")

[node name="ClearHistoryImage" type="TextureRect" parent="ColorRect/ClearHistoryButton"]
custom_minimum_size = Vector2(65, 65)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_fomf7")
expand_mode = 1

[node name="ClearHistoryPopup" type="PopupMenu" parent="ColorRect/ClearHistoryButton"]
size = Vector2i(129, 35)
item_count = 1
item_0/text = "Clear History"
item_0/id = 0

[connection signal="pressed" from="ColorRect/ClearHistoryButton" to="." method="_on_clear_history_button_pressed"]
[connection signal="index_pressed" from="ColorRect/ClearHistoryButton/ClearHistoryPopup" to="." method="_on_clear_history_popup_index_pressed"]
